--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~52.0.18",
+    "expo-camera": "^16.0.9",
+    "expo-image-picker": "^16.0.3",
+    "expo-media-library": "^17.0.3",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.6",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^7.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
