--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~52.0.18",
+    "expo-camera": "^16.0.9",
+    "expo-file-system": "^18.0.5",
+    "expo-image-picker": "^16.0.3",
+    "expo-location": "^18.0.4",
+    "expo-media-library": "^17.0.3",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.6",
     "react": "18.3.1",
     "react-native": "0.76.5"
   },
