--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/firestore": "^21.6.1",
     "expo": "~52.0.18",
     "expo-camera": "^16.0.9",
     "expo-file-system": "^18.0.5",
@@ -17,6 +18,7 @@
     "expo-media-library": "^17.0.3",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.6",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-native": "0.76.5"
   },
